--- a/src/main/resources/nl/bos/views/InputPane.fxml
+++ b/src/main/resources/nl/bos/views/InputPane.fxml
@@ -81,6 +81,8 @@
                 <TextField/>
                 <Button fx:id="btnConnect" defaultButton="true" maxWidth="1.7976931348623157E308"
                         mnemonicParsing="false" onAction="#handleConnect" text="Connect"/>
+                <Button fx:id="btnDisconnect" defaultButton="true" maxWidth="1.7976931348623157E308"
+                        mnemonicParsing="false" onAction="#handleDisconnect" text="Disconnect" visible="false"/>
                 <Button fx:id="btnExit" cancelButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
                         onAction="#handleExit" text="Exit"/>
             </children>
