--- a/src/main/resources/nl/bos/views/RepositoryBrowser.fxml
+++ b/src/main/resources/nl/bos/views/RepositoryBrowser.fxml
@@ -25,12 +25,12 @@
                 </VBox>
                 <VBox spacing="3.0">
                     <children>
-                        <TextField/>
-                        <TextField/>
-                        <TextField/>
-                        <TextField/>
-                        <TextField/>
-                        <TextField/>
+                        <TextField fx:id="txtObjectId" editable="false"/>
+                        <TextField fx:id="txtObjectType" editable="false"/>
+                        <TextField fx:id="txtContentType" editable="false"/>
+                        <TextField fx:id="txtContentSize" editable="false"/>
+                        <TextField fx:id="txtCreationDate" editable="false"/>
+                        <TextField fx:id="txtModifyDate" editable="false"/>
                     </children>
                 </VBox>
                 <VBox spacing="11.0">
@@ -48,12 +48,12 @@
                 </VBox>
                 <VBox spacing="3.0">
                     <children>
-                        <TextField/>
-                        <TextField/>
-                        <TextField/>
-                        <TextField/>
-                        <TextField/>
-                        <TextField/>
+                        <TextField fx:id="txtLockOwner" editable="false"/>
+                        <TextField fx:id="txtLockMachine" editable="false"/>
+                        <TextField fx:id="txtLockDate" editable="false"/>
+                        <TextField fx:id="txtAclName" editable="false"/>
+                        <TextField fx:id="txtPermission" editable="false"/>
+                        <TextField fx:id="txtVersion" editable="false"/>
                     </children>
                 </VBox>
                 <VBox spacing="5.0">
