--- a/src/main/resources/nl/bos/views/GetAttributesPane.fxml
+++ b/src/main/resources/nl/bos/views/GetAttributesPane.fxml
@@ -14,7 +14,8 @@
         <Button fx:id="btnFind" mnemonicParsing="false" onAction="#handleFind" text="Find"/>
         <Button fx:id="btnFindPrevious" mnemonicParsing="false" onAction="#handleFindPrevious" text="&lt;"/>
         <Button fx:id="btnFindNext" mnemonicParsing="false" onAction="#handleFindNext" text="&gt;"/>
-        <CheckBox fx:id="chkCaseSensitive" mnemonicParsing="false" text="Case Sensitive"/>
+        <CheckBox fx:id="chkCaseSensitive" mnemonicParsing="false" onAction="#handleCaseSensitive"
+                  text="Case Sensitive"/>
         <TextField fx:id="txtSearch" prefColumnCount="30"/>
         <VBox.margin>
             <Insets left="5.0" right="5.0" top="10.0"/>
