--- a/src/main/resources/nl/bos/views/JobEditorPane.fxml
+++ b/src/main/resources/nl/bos/views/JobEditorPane.fxml
@@ -87,9 +87,9 @@
                     </HBox.margin>
                 </CheckBox>
             </HBox>
-            <TextField fx:id="txtName"/>
-            <TextField fx:id="txtType"/>
-            <TextField fx:id="txtDescription" onKeyTyped="#handleDescription"/>
+            <TextField fx:id="txtName" onKeyTyped="#handleTextField"/>
+            <TextField fx:id="txtType" onKeyTyped="#handleTextField"/>
+            <TextField fx:id="txtDescription" onKeyTyped="#handleTextField"/>
             <HBox spacing="5.0">
                 <ImageView fx:id="ivState" fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                     <HBox.margin>
